syntax = "proto3";

package alerts;

// ======= Email Service =========
service EmailService {
  rpc SendEmail (EmailRequest) returns (EmailResponse);
}

message EmailRequest {
  string to = 1;
  string subject = 2;
  string html = 3;
}

message EmailResponse {
  bool ok = 1;
  string message = 2;
}

// ======= WhatsApp Service =========
service WhatsAppService {
  rpc SendMessage (WhatsappRequest) returns (WhatsappResponse);
}

message WhatsappRequest {
  string mobileNumber = 1;
  string message = 2;
}

message WhatsappResponse {
  bool ok = 1;
  string message = 2;
}
